@@ -253,4 +253,6 @@ Changes since version 1.2-0
 Changes since version 1.2-1
 
 	* a new purtest function to perform unit root tests
-	
+
+	* [[.pdata.frame is modified so that NULL (and not en error
+	message) is returned if an unknown column is selected
